# MyAppAgain

./: Application.vala  COPYING  com.github.jaywooTM.MyAppAgain.desktop  meson.build
data/: com.github.jaywooTM.MyAppAgain.appdata.xml
